# ccmock

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  Makefile.in  README.md  README.rst  configure.sh
.github/workflows/: build.yaml  ci.yaml  main.yaml  workflow-build.sh
bash-completion/: ccmock
cmake/: artifactory.py  ci.cmake  util.cmake
docker/: Makefile
docker/archlinux-build/: Dockerfile
docker/archlinux-ci/: Dockerfile
docker/fedora-build/: Dockerfile
docker/ubuntu-build/: Dockerfile
src/: ASTVisitor.cpp  ASTVisitor.hpp  ActionFactory.cpp  ActionFactory.hpp  CMocka.cpp  CMocka.hpp  CompilationDatabase.cpp  CompilationDatabase.hpp  Config.cpp  Config.hpp  FFF.cpp  FFF.hpp  GMock.cpp  GMock.hpp  GMockGenerator.cpp  GMockGenerator.hpp  Generator.cpp  Generator.hpp  MockAction.cpp  MockAction.hpp  main.cpp
src/output/: CMocka.cpp  CMocka.hpp  FFF.cpp  FFF.hpp  GMock.cpp  GMock.hpp  OutputGenerator.cpp  OutputGenerator.hpp  OutputWriter.cpp  OutputWriter.hpp  Raw.cpp  Raw.hpp
src/util/: Decl.cpp  Decl.hpp  Glob.hpp  Path.cpp  Path.hpp  Type.hpp  commandline.hpp  string-ostream.cpp  string_ostream.cpp  string_ostream.hpp
test/: CMakeLists.txt
test/static/: CMakeLists.txt
test/static/cmake/: clang-analysis.cmake  clang-tidy.cmake  cppcheck.cmake  shellcheck.cmake
test/system/: CMakeLists.txt  Makefile
test/system-tests/: compile-commands.json  run.sh  simple-test.cpp  simple.c  simple.h
test/system/basic/: CMakeLists.txt  Makefile  compile_commands.in  compile_commands.json
test/system/basic/cmocka/: app.c  callback.c  fac.c
test/system/basic/fff/: app.cpp  callback.cpp  fac.cpp
test/system/basic/gmock/: app.cpp  callback.cpp  fac.cpp
test/system/basic/src/: app.c  callback.c  callback.h  fac.c  fac.h
test/system/basic/test/: app.cpp  callback.cpp  ccmock.yaml  fac.cpp
test/system/c-code/: CMakeLists.txt
test/system/c-code/cmocka/: app.c
test/system/c-code/fff/: app.cpp  callback.cpp  fac.cpp
test/system/c-code/gmock/: app.cpp  callback.cpp  fac.cpp
test/system/c-code/src/: app.c  callback.c  callback.h  fac.c
test/system/common/include/: fff.h
test/system/cxx-code/: CMakeLists.txt
test/system/cxx-code/gmock/: clone1.cpp  clone2.cpp  diffdecls.cpp  global.cpp  globals.cpp  rect.cpp  value.cpp
test/system/cxx-code/src/: clone1.cpp  clone2.cpp  diffdecls.cpp  global.cpp  globals.cpp  nested.cpp  rect.cpp  value.cpp
test/system/scripts/: CMakeLists.txt  Makefile  clang.yaml  config.sh  gmock.yaml  mocking.yaml
test/system/zlib-ng/: CMakeLists.txt  Makefile  ccmock.yaml
test/system/zlib-ng/cmocka/: adler32.c  crc32.c  uncompr.c
test/system/zlib-ng/fff/: adler32.cpp  crc32.cpp  uncompr.cpp
test/system/zlib-ng/gmock/: adler32.cpp  crc32.cpp  uncompr.cpp
test/system/zlib-ng/tests/: adler32.cpp  crc32.cpp  uncompr.cpp
test/unit/: ActionFactory.cpp  CMakeLists.txt
test/unit/src/: ActionFactory.cpp  MockAction.cpp
test/unit/util/: string-ostream.cpp
